<?xml version="1.0" encoding="utf-8"?>
  <PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="NyalaSettings">   
    
    <PreferenceCategory android:title="Basics">
         <CheckBoxPreference
    	     	 android:id="@+id/autoExit"
    		     android:key="autoExit"
    		     android:defaultValue="true"
    		     android:title="Auto-exit after connect"/>
         <CheckBoxPreference
                 android:id="@+id/autoConnect"  
                 android:key="autoConnect"
                 android:defaultValue="true"
                 android:title="Auto-connect on scan" />
         <CheckBoxPreference
                 android:id="@+id/autoSave"
                 android:key="autoSave"
                 android:defaultValue="true"
                 android:title="Save last scan image to Gallery" />
                                         
    </PreferenceCategory>
    
    <PreferenceCategory android:title="Scans">
        <EditTextPreference android:enabled="true" 
                            android:key="ScanPath" 
                            android:dialogTitle="Scan Folder" 
                            android:selectable="true" 
                            android:dialogMessage="Folder on SDCard to save scans to" 
                            android:defaultValue="nyala/scans"
                            android:title="Pathname"/>
          <ListPreference
                android:key="SaveDepth"
                android:title="@string/title_list_preference"
                android:entries="@array/entries_list_preference"
                android:entryValues="@array/entryvalues_list_preference"
                android:dialogTitle="@string/dialog_title_list_preference" />
          
           <ListPreference
                android:key="DeleteScans"
                android:title="@string/title_deletescan_preference"
                android:entries="@array/entries_deletescan_preference"
                android:entryValues="@array/entryvalues_deletescan_preference"
                android:dialogTitle="@string/dialog_title_deletescan_preference" />
          
          </PreferenceCategory>               		           
</PreferenceScreen>